# Projet-INF552

./: .gitignore  CMakeLists.txt  OffsetChooser.cpp  OffsetChooser.h  PatchMatcher.cpp  PatchMatcher.h  Patcher.cpp  Patcher.h  RandomOffsetChooser.cpp  RandomOffsetChooser.h  SubPatchMatcher.cpp  SubPatchMatcher.h  image.h  main.cpp
